[gd_scene load_steps=6 format=2]

[ext_resource path="res://backgounds/night-sky-at-ceres.jpg" type="Texture" id=1]
[ext_resource path="res://fonts/start.tres" type="DynamicFont" id=2]
[ext_resource path="res://levels/ui/charlist.gd" type="Script" id=3]
[ext_resource path="res://levels/bottomhud.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.8, 0, 1 )

[node name="Charlist" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -360.0
margin_right = -1280.0
margin_bottom = -720.0
script = ExtResource( 3 )

[node name="Night Sky" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 1 )

[node name="Game name" type="Label" parent="."]
margin_top = 3.0
margin_right = 1280.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
text = "MENU_CHARSEL"
align = 1
valign = 1

[node name="Bottomhud" parent="." instance=ExtResource( 4 )]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 447.0
margin_top = 92.0
margin_right = 834.0
margin_bottom = 668.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 360.0
margin_bottom = 576.0

[node name="Midori" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_right = 360.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Midori Asgardius"

[node name="Diana" type="Button" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 58.0
margin_right = 360.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Diana Asgardius"

[node name="Rikka" type="Button" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 116.0
margin_right = 360.0
margin_bottom = 170.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Rikka Grub"

[node name="Kimberly" type="Button" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 174.0
margin_right = 360.0
margin_bottom = 228.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Kimberly Arch"

[node name="Hu" type="Button" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 174.0
margin_right = 360.0
margin_bottom = 228.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Hu Wei"

[node name="Gurukosu" type="Button" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 174.0
margin_right = 360.0
margin_bottom = 228.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Guruk≈çsu Tanaka"

[node name="Momo" type="Button" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 174.0
margin_right = 360.0
margin_bottom = 228.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Momo Tanaka"

[node name="Pamela" type="Button" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 58.0
margin_right = 387.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Pamela Hashimoto"

[node name="Lety" type="Button" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 58.0
margin_right = 360.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Lety Hashimoto"

[node name="Return" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 360.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "BUTTON_RETURN"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Midori" to="." method="_on_Midori_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Diana" to="." method="_on_Diana_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Kimberly" to="." method="_on_Kimberly_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Pamela" to="." method="_on_Pamela_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Lety" to="." method="_on_Lety_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Return" to="." method="_on_Return_pressed"]
